--- a/alembic.ini
+++ b/alembic.ini
@@ -86,7 +86,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = driver://user:pass@localhost/dbname
+sqlalchemy.url = postgresql://postgres:postgres@0.0.0.0:5433/app_db
 
 
 [post_write_hooks]
